[features]: stable threshhold config and notifications
